gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fizz-gateway
  namespace: fizz-gateway
spec:
  type: NodePort
  ports:
  - port: 8600
    protocol: TCP
    targetPort: 8600
  selector:
    app: fizz-gateway
